# data-science-portfolio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
astrophysics/: README.md  aco_2670_dark_matter_analysis.ipynb  aco_2670_dark_matter_analysis_report.tex
atmospheric_science/: README.md  exoplanet_atmospheric_analysis.ipynb
computational_modeling/: README.md  monte_carlo_simulation_and_statistical_inference.ipynb
