[project]
name = "data-science-portfolio"
version = "1.0.0"
description = "A computational astrophysics and atmospheric science portfolio demonstrating statistical modeling, dark matter analysis, and Monte Carlo simulations using modern Python data pipelines."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Jackson Ferguson", email = "jackson.ferguson0@gmail.com" }
]
dependencies = [
    "astropy>=7.2.0",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# Enable specific rule sets to signal you care about code quality:
# E: pycodestyle (standard formatting)
# F: Pyflakes (logical errors)
# I: isort (organizes imports automatically)
# B: flake8-bugbear (catches likely bugs/design flaws)
# N: pep8-naming (enforces standard variable naming conventions)
select = ["E", "F", "I", "B", "N"]

ignore = []

[tool.ruff.lint.isort]
known-third-party = ["numpy", "pandas", "scipy", "astropy", "matplotlib"]