[project]
name = "data-science-portfolio"
version = "1.0.0"
description = "A computational astrophysics and atmospheric science portfolio demonstrating statistical modeling, dark matter analysis, and Monte Carlo simulations using modern Python data pipelines."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Jackson Ferguson", email = "jackson.ferguson0@gmail.com" }
]
dependencies = [
    "astropy>=7.2.0",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "nbdime>=4.0.3",
    "nbmake>=1.5.5",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Enable specific rule sets:
# E: pycodestyle
# F: Pyflakes
# I: isort
# B: flake8-bugbear
# N: pep8-naming
select = ["E", "F", "I", "B", "N"]

# Ignore rules that conflict with scientific notation and notebook workflows
ignore = [
    "N802", # Function name should be lowercase (allows 'sample_H0')
    "N803", # Argument name should be lowercase (allows 'M_sol')
    "N806", # Variable in function should be lowercase (allows 'N', 'X', 'T')
    "N816", # Variable in global scope should not be mixedCase (allows 'M_sol')
    "E501", # Line too long (handled by ruff-format, not linter)
]

[tool.ruff.lint.isort]
known-third-party = ["numpy", "pandas", "scipy", "astropy", "matplotlib"]

[tool.pytest.ini_options]
addopts = "--nbmake"
testpaths = [
    "astrophysics",
    "atmospheric_science",
    "computational_modeling",
]
# Ignore the large data directory if it contains non-notebook files that confuse pytest
norecursedirs = ["data", "images"]
